# davinci

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  requirements.txt
.claude/: settings.json
apps/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/core/: apps.py  models.py  storage_utils.py  urls.py
config/: __init__.py  urls.py
davinci-frontend/: components.json  package-lock.json  package.json  schema.yml
diagnostics/: 02_roadmap_checklist.md  FINAL_REPORT.md
guidelines/: 10_standard_code.md  11_django_conf.md  12_test.md  13_checklinst.md  1_8_prompt_dev.md  9_roadmap.md  DAVINCI_AUTH_PROMPT.md  DAVINCI_FIREBASE_AUTH.md  DAVINCI_FIREBASE_AUTH_PROMPT.docx  DAVINCI_FRONTEND.md  doc_01_project_overview.md  doc_02_models.md  doc_03_search_engine.md  doc_04_ingestion.md  doc_05_api_frontend.md  doc_06_platomics_technical_overview.md
rust_engine/: Cargo.toml
rust_src/: Cargo.toml
rust_src/data/: drug_names.txt  gene_symbols.txt
rust_src/src/: lib.rs
rust_src/src/categorization/: clinical.rs  context_extractor.rs  drug_ner.rs  gene_ner.rs  mod.rs  variant_ner.rs
rust_src/src/db/: copy_writer.rs  job_tracker.rs  mod.rs
rust_src/src/ncbi/: client.rs  fetch.rs  mesh.rs  mod.rs  models.rs  parser.rs  preview.rs
rust_src/src/ncbi/test_data/: pubmed_sample.xml
rust_src/src/omics/: bioproject_parser.rs  downloader.rs  geo_parser.rs  gwas_parser.rs  mod.rs  models.rs  pride_parser.rs  sample_parser.rs  sra_parser.rs  type_classifier.rs
scripts/: seed_categories.py  start_davinci.sh
(+224 files in other folders)
