[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
md-5 = "0.10"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.36"
indexmap = "2"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
rayon = "1.10"
memmap2 = "0.9"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
aho-corasick = "1.1"
